--- a/index.html
+++ b/index.html
@@ -17,47 +17,47 @@
 			<div id="header">
 				<!-- <span class="logo icon fa-paper-plane-o"></span> -->
 				<img class="logo icon fa-paper-plane-o" src="./images/Brandon_Tran.jpg" alt="">
-				<h1>Hi. This is Brandon.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
-				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<h1>Hi. I am Brandon.</h1>
+				<p>A software developer ready to create new projects.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+					<h2>About me</h2>
+					
+					<p>I am a former Materials Engineer turned software developer that loves to work in teams creating apps that would make a
+					positive social impact. Experience with Ruby, Ruby on Rails, Javascript, jQuery, React.js, Redux, SQL, Git, HTML5, and
+					CSS. I love working with UI/UX and making websites easy for users and giving them a positive experience while navigating
+					around the website. I am currently working on developing a clone of Flickr that provides users with a modern interface
+					for sharing photos. <br>
+					<br>
+					<a href="./images/Brandon Tran Resume.pdf">View my resume</a>
+					</p>
+					
 				</header>
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="#" class="image icon fa-camera"><img src="images/willowisp_sample.png" alt="" /></a>
 						<div class="content">
-							<h3>The First Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Will-o'-Wisp</h3>
+							<p>A photo sharing website inspired by Flickr. Show other users your incredible photography skills and inspire the next generation of photographers.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="https://picook.herokuapp.com/#/" class="image icon fa-spoon"><img src="images/picook splash.png" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>PiCook</h3>
+							<p>Turn those food photos into reality! Upload a photo of a food and get the recipe on how to make it. Save recipes and come back to them whenever you want to unleash your culinary skills.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="https://brandt2.github.io/Catch-em-all/" class="image icon fa-gamepad"><img src="images/catchemall_splash.png" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Catch'em All</h3>
+							<p>A Pokemon themed brick breaker game where the goal of the player is to catch all 150 pokemon. Do you have what it takes to be a pokemon master?</p>
 						</div>
 					</section>
 				</div>
