Finish adding info to portfolio

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 		<title>Directive by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -16,9 +25,9 @@
 		<!-- Header -->
 			<div id="header">
 				<!-- <span class="logo icon fa-paper-plane-o"></span> -->
-				<img class="logo icon fa-paper-plane-o" src="./images/Brandon_Tran.jpg" alt="">
+				<img class="logo icon" src="./images/Brandon_Tran.jpg" alt="">
 				<h1>Hi. I am Brandon.</h1>
-				<p>A software developer ready to create new projects.</p>
+				<p>A software developer located in San Francisco.</p>
 			</div>
 
 		<!-- Main -->
@@ -40,7 +49,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="#" class="image icon fa-camera"><img src="images/willowisp_sample.png" alt="" /></a>
+						<a href="https://will-o-wisp.herokuapp.com/#/" class="image icon fa-camera"><img src="images/willowisp_sample.png" alt="" /></a>
 						<div class="content">
 							<h3>Will-o'-Wisp</h3>
 							<p>A photo sharing website inspired by Flickr. Show other users your incredible photography skills and inspire the next generation of photographers.</p>
@@ -65,9 +74,24 @@
 				
 				<div class="box container">
 					<header>
-						<h2>A lot of generic stuff</h2>
+						<h2>Skills</h2>
 					</header>
 					<section>
+						<ul class="skills">
+							<li class="test"><i class="devicon-ruby-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-rails-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-javascript-plain colored"></i></li>
+							<li class="test"><i class="devicon-react-original-wordmark colored"></i></li>
+							<li><img class="test1" src="images/redux.png" alt="react"></li>
+							<li class="test"><i class="devicon-postgresql-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-jquery-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-html5-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-css3-plain-wordmark colored"></i></li>
+							<li class="test"><i class="devicon-git-plain-wordmark colored"></i></li>
+						</ul>
+					</section>
+
+					<!-- <section>
 						<header>
 							<h3>Paragraph</h3>
 							<p>This is the subtitle for this particular heading</p>
@@ -211,7 +235,7 @@
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 
 			</div>
 
@@ -219,14 +243,13 @@
 			<div id="footer">
 				<div class="container medium">
 
-					<header class="major last">
-						<h2>Questions or comments?</h2>
+					<header class="contact-me">
+						<h2>Contact Me</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>If you want to reach me please email me at <a href="mailto:brandt2@uci.edu">brandt2@uci.edu</a>.</p>
 
-					<form method="post" action="#">
+					<!-- <form method="post" action="#">
 						<div class="row">
 							<div class="col-6 col-12-mobilep">
 								<input type="text" name="name" placeholder="Name" />
@@ -243,18 +266,18 @@
 								</ul>
 							</div>
 						</div>
-					</form>
+					</form> -->
 
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+						<li><a href="https://github.com/brandt2" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/brandon-tran-23a40911a/" class="icon fa-linkedin-square"><span class="label">Dribbble</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Brandon Tran</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</div>
