--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-137722447-1');
 		</script>
 
-		<title>Directive by HTML5 UP</title>
+		<title>Brandon Tran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
