Update my portfolio with animexplore

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 				</header>
 
 				<div class="box alt container">
+					<section class="feature right">
+						<a href="http://www.animexplore.com/" class="image icon fa-gamepad"><img src="images/animexplore_screenshot.png"
+								alt="" /></a>
+						<div class="content">
+							<h3>AnimeXplore</h3>
+							<p>Ever wondered what chapter to read after watching an episode? What episode to watch after reading a chapter? With AnimeXplore looking up episodes and chapters become incredibly easy.</p>
+						</div>
+					</section>
 					<section class="feature left">
 						<a href="https://will-o-wisp.herokuapp.com/#/" class="image icon fa-camera"><img src="images/willowisp_sample.png" alt="" /></a>
 						<div class="content">
