Update link to animexplore

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 				<div class="box alt container">
 					<section class="feature right">
-						<a href="http://www.animexplore.com/" class="image icon fa-gamepad"><img src="images/animexplore_screenshot.png"
+						<a href="https://animexplore.herokuapp.com/anime" class="image icon fa-gamepad"><img src="images/animexplore_screenshot.png"
 								alt="" /></a>
 						<div class="content">
 							<h3>AnimeXplore</h3>
